tests/testfiles/passing/invalid_identifiers/keyword_as_id_double.c
/* Keyword as identifier: double */
int main() {
    int double;
}